--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "splunknova",
   "version": "1.0.0",
-  "description": "",
+  "description": "Splunk Project Nova client for NodeJS",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sodle/node-splunknova"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
