--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "node-fetch": "^2.1.1",
     "query-string": "^6.0.0",
     "url-join": "^4.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^5.0.4"
   }
 }
