--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/sodle/node-splunknova"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "url-join": "^4.0.0"
   },
   "devDependencies": {
-    "mocha": "^5.0.4"
+    "expect": "^23.0.0-alpha.0",
+    "jest": "^22.4.2"
   }
 }
